# tree

./: .gitignore  .tree_ignore  Cargo.toml  LICENSE  README.md  clippy-commands.md  codecov.yml  justfile  lcov.info  old_justfile  setup-windows.ps1  tree_refactor_guide.md
.github/workflows/: ci.yml  release.yml
coverage-html/html/: index.html
coverage-html/html/coverage/Users/rnio/Private/GitHub/tree/src/: lib.rs.html  tree_printer.rs.html
scripts/: lint.sh
src/: lib.rs  main.rs  tree_printer.rs
tests/: edge_case_tests.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
