[package]
name = "tree"
version = "0.1.4"
edition = "2021"
rust-version = "1.77"
description = "A fast, modern directory tree printer with intelligent ignore patterns and .gitignore integration"
license = "MIT"
repository = "https://github.com/githubrobbi/tree"
keywords = ["cli", "tree", "directory", "filesystem", "gitignore"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Robert Nio <robert_nio@intuit.com>"]
readme = "README.md"
homepage = "https://github.com/githubrobbi/tree"
documentation = "https://docs.rs/tree"

[[bin]]
name = "tree"
path = "src/bin/tree.rs"

[dependencies]
anyhow = "1.0.98"
ignore = "0.4.23"
clap = { version = "4.5.41", features = ["derive"] }
walkdir = "2.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.0"
