[package]
name = "tree"
version = "0.1.11"
edition = "2021"
rust-version = "1.77"
description = "A fast, modern directory tree printer with intelligent ignore patterns and .gitignore integration"
license = "MIT"
repository = "https://github.com/githubrobbi/tree"
keywords = ["cli", "tree", "directory", "filesystem", "gitignore"]
categories = ["command-line-utilities", "filesystem"]
authors = ["SKY, LLC. <skylegal@nios.net>"]
readme = "README.md"
homepage = "https://github.com/githubrobbi/tree"
documentation = "https://docs.rs/tree"

[[bin]]
name = "tree"
path = "src/bin/tree.rs"

[dependencies]
anyhow = "1.0.98"
ignore = "0.4.23"
clap = { version = "4.5.41", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.20.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
proptest = "1.7.0"
